WIK-DPS-TP04/create_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-echo-pod
  namespace: echo
spec:
  containers:
  - name: echo
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 8080
