WIK-DPS-TP04/service.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: echo
spec:
  selector:
    tier: echos
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 8080
